--- a/prizmer/static/main.css
+++ b/prizmer/static/main.css
@@ -256,6 +256,30 @@ background-color:#E6E6FA;
 background-color:#FFF0F5;
 }
 
+
+.table_calendar {
+text-align: center;
+border: 0;
+border-collapse: collapse;
+border-spacing: 5px;
+background: #E1E3E0;
+border-radius: 20px;
+}
+.th_calendar {
+font-size: 22px;
+font-weight: 300;
+padding: 12px 10px;
+border-bottom: 2px solid #F56433;
+color: red;
+}
+
+.td_calendar {
+padding: 10px;
+color: #8D8173;
+}
+
+
+
 #tree {
 width: 100%;
 height: 480px;
