--- a/prizmer/templates/data_table/92.html
+++ b/prizmer/templates/data_table/92.html
@@ -3,107 +3,41 @@
     </head>
     <body>
 <script src="/static/liHighLight.js" type=text/javascript></script>
-
-
-<script>
-  
-  $(document).ready(function() {
-
-    $('#calendar').fullCalendar({
-      header: {
-        left: 'prev, next today',
-        center: 'title',
-        right: 'month,basicWeek,basicDay'
-      },
-      defaultDate: '2018-03-12',
-      navLinks: true, // can click day/week names to navigate views
-      editable: true,
-      eventLimit: true, // allow "more" link when too many events
-      events: [
-        {
-          title: 'All Day Event',
-          start: '2018-03-01'
-        },
-        {
-          title: 'Long Event',
-          start: '2018-03-07',
-          end: '2018-03-10'
-        },
-        {
-          id: 999,
-          title: 'Repeating Event',
-          start: '2018-03-09T16:00:00'
-        },
-        {
-          id: 999,
-          title: 'Repeating Event',
-          start: '2018-03-16T16:00:00'
-        },
-        {
-          title: 'Conference',
-          start: '2018-03-11',
-          end: '2018-03-13'
-        },
-        {
-          title: 'Meeting',
-          start: '2018-03-12T10:30:00',
-          end: '2018-03-12T12:30:00'
-        },
-        {
-          title: 'Lunch',
-          start: '2018-03-12T12:00:00'
-        },
-        {
-          title: 'Meeting',
-          start: '2018-03-12T14:30:00'
-        },
-        {
-          title: 'Happy Hour',
-          start: '2018-03-12T17:30:00'
-        },
-        {
-          title: 'Dinner',
-          start: '2018-03-12T20:00:00'
-        },
-        {
-          title: 'Birthday Party',
-          start: '2018-03-13T07:00:00'
-        },
-        {
-          title: 'Click for Google',
-          url: 'http://google.com/',
-          start: '2018-03-28'
-        }
-      ]
-    });
-
-  });
-
-</script>
-<style>
-
-  body {
-    margin: 40px 10px;
-    padding: 0;
-    font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
-    font-size: 14px;
-  }
-
-  #calendar {
-    max-width: 900px;
-    margin: 0 auto;
-  }
-
-</style>
-
 <br>
 <span>Статистика опроса по электричеству за месяц</span>
 <br>
-тест
 <br>
-	
-<div id='calendar'></div>
+{% if dtAll%}
+{% for val in dtAll  %}
+<table class="table_calendar" id="data-table">
+<th colspan="7" class="th_calendar">
+{{val.0.0.5}}
+</th >
+<tr>
+<th>Объект</th>
+<th class="th_hvs">Опрошено</th>
 
+</tr>
+{% for val_d in val %}
+{% for value in val_d %}
+<tr>
+<td>{{value.0}} </td>
+<td class="th_hvs"><strong>{{value.3}} &#037;<strong></td>
+</tr>
+
+{% endfor %}
+{% endfor %}
+</table>
+
+{% endfor %}
+{% else %}
+<td>
+<span><strong>Нет данных.</strong></span>
+</td>
+<br>
+{% endif %}
+
+ 
 <br>
 <br>
 <br>
