--- a/prizmer/templates/economic.html
+++ b/prizmer/templates/economic.html
@@ -27,7 +27,7 @@
 			<option value="86">86. Статистика опроса по электрике</option> 
 			<option value="88">88. Статистика опроса по теплу</option> 
 			<option value="90">90. Статистика опроса по воде (импульсные ПУ)</option> 
-			<option value="92">92. Статистика опроса по электричеству за месяц</option> 
+			<option value="92">92. Статистика опроса по всем ресурсам за месяц</option> 
 
         </select>
         <div id ="export_report">-------</div>
