--- a/prizmer/templates/data_table/92.html
+++ b/prizmer/templates/data_table/92.html
@@ -4,11 +4,12 @@
     <body>
 <script src="/static/liHighLight.js" type=text/javascript></script>
 <br>
+<div class='a'>
 <span>Статистика опроса по электричеству за месяц</span>
 <br>
 <br>
-{% if dtAll%}
-{% for val in dtAll  %}
+{% if dtAll_el%}
+{% for val in dtAll_el  %}
 <table class="table_calendar" id="data-table">
 <th colspan="7" class="th_calendar">
 {{val.0.0.5}}
@@ -37,8 +38,79 @@
 <br>
 {% endif %}
 
+</div>
  
+ <div class='b'>
+<span>Статистика опроса по теплу за месяц</span>
 <br>
+<br>
+{% if dtAll_h%}
+{% for val in dtAll_h  %}
+<table class="table_calendar" id="data-table">
+<th colspan="7" class="th_calendar">
+{{val.0.0.5}}
+</th >
+<tr>
+<th>Объект</th>
+<th class="th_hvs">Опрошено</th>
+
+</tr>
+{% for val_d in val %}
+{% for value in val_d %}
+<tr>
+<td>{{value.0}} </td>
+<td class="th_hvs"><strong>{{value.3}} &#037;<strong></td>
+</tr>
+
+{% endfor %}
+{% endfor %}
+</table>
+
+{% endfor %}
+{% else %}
+<td>
+<span><strong>Нет данных.</strong></span>
+</td>
+<br>
+{% endif %}
+
+ </div>
+ 
+  <div class='c'>
+<span>Статистика опроса по воде за месяц</span>
+<br>
+<br>
+{% if dtAll_w%}
+{% for val in dtAll_w  %}
+<table class="table_calendar" id="data-table">
+<th colspan="7" class="th_calendar">
+{{val.0.0.5}}
+</th >
+<tr>
+<th>Объект</th>
+<th class="th_hvs">Опрошено</th>
+
+</tr>
+{% for val_d in val %}
+{% for value in val_d %}
+<tr>
+<td>{{value.0}} </td>
+<td class="th_hvs"><strong>{{value.3}} &#037;<strong></td>
+</tr>
+
+{% endfor %}
+{% endfor %}
+</table>
+
+{% endfor %}
+{% else %}
+<td>
+<span><strong>Нет данных.</strong></span>
+</td>
+<br>
+{% endif %}
+ </div>
+ <br>
 <br>
 <br>
 <br>
