--- a/prizmer/templates/control.html
+++ b/prizmer/templates/control.html
@@ -38,9 +38,10 @@
             <option value="17">17. Потребление за период. 3 Тарифа</option>
 			<option value="40">40. Проверка соотвествия зав.номеров</option>
 			<!-- <option value="41">41. Отчёт по форме 80020</option>
+			<option value="71">71. Отчёт по форме 80040</option>
 			<option value="68">68. Режимный день</option>  -->
 			<option value="69">69. Профиль показаний за период по 3 тарифам график</option>
-			<option value="71">71. Потребление за период. 3 Тарифа</option>
+			<option value="91">91. Потребление за период. 3 Тарифа</option>
 			<option value="72">72. Показания на дату с комментариями. 3 Тарифа</option>
 			<option value="77">77. Баланс за период по балансной группе</option>
         </select>
