--- a/prizmer/templates/data_table/electric/71.html
+++ b/prizmer/templates/data_table/electric/71.html
@@ -1,98 +1,44 @@
-<script src="/static/liHighLight.js" type=text/javascript></script>
-<script type="text/javascript">
-	{% if AllData %}
-    var ctx = document.getElementById("myChart").getContext('2d');
-	var myChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-		labels:{{label|safe}},
-		datasets: {{AllData|safe}},
-    options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero:true
-                }
-            }]
-        }
-    }
-	}
-});
-	{% endif %}	
+<script src="/static/liHighLight_30_min.js" type=text/javascript></script>
 
-	</script>
-<span>Потребление электроэнергии в период с <strong>{{electric_data_start}}</strong> по <strong>{{electric_data_end}}</strong></span>
+<span>Отчёт по форме 80040</span>
 <br>
-<span>Абонент: <strong>{{obj_title}}</strong></span>
+<span>Дата начала формирования отчётов {{electric_data_start}}</span>
 <br>
-<br>
-<br>{% if AllData %}
-			<canvas id="myChart" width="300" height="100"></canvas>						
-	{% endif %}
+<span>Дата окончания формирования отчётов {{electric_data_end}}</span>
 <br>
 <br>
-{% if data_table %} 
-<table class="content" id="data-table" >
+{% if data_table %}
+<span>Отправитель: <strong>{{data_table.0.0}}</strong></span>
+<br>
+<span>ИНН Отправителя: <strong>{{data_table.0.1}}</strong></span>
+<br>
+<span>Номер договора: <strong>{{data_table.0.2}}</strong><span>
+<br>
+<table id="data-table" >
 <tr>
-<th>Абонент</th>
 <th>Заводской номер</th>
-<th>Ктт</th>
-<th>Ктн</th>
-<th>T0 A+ нач., кВт*ч</th>
-<th>T1 A+</th>
-<th>T2 A+</th>
-<th>T3 A+</th>
-<!--<th>T4 A+</th>-->
-<th>T0 A+ кон., кВт*ч</th>
-<th>T1 A+</th>
-<th>T2 A+</th>
-<th>T3 A+</th>
-<!--<th>T4 A+</th>-->
-<th>расход T0 A+, кВт*ч</th>
-<!--
-<th><strong>расход энергии Т0 А+, кВт*ч</strong></th>
--->
-<th>расход T1 A+</th>
-<th>расход T2 A+</th>
-<th>расход T3 A+</th>
-<!--<th>расход T4 A+</th>-->
-<!--
-<th>T0 R+ нач., кВар*ч</th>
-<th>T0 R+ кон., кВар*ч</th>
-<th>расход T0 R+, кВар*ч</th>
-<th><strong>расход энергии Т0 R+, кВар*ч</strong></th>
--->
+<th>Псевдоним</th>
+<th>Код ПСИ</th>
+<th>Дата последнего чтения</th>
+<th>T0 A+ нач.</th>
+<th>T0 A+ кон.</th>
+<td>Разница</td>
+<td>Сумма получасовок</td>
+<td>% Сбора Получасовок</td>
+
 </tr>
 {% for value in data_table %}
 <tr>
-<td>{{value.0}}</td>
-<td>{{value.1}}</td>
-<td>{{value.20|floatformat}}</td>
-<td>{{value.23|floatformat}}</td>
-<td>{{value.2}}</td>
 <td>{{value.3}}</td>
 <td>{{value.4}}</td>
 <td>{{value.5}}</td>
-<!--<td>{{value.6}}</td>-->
+<td>{{value.6}}</td>
 <td>{{value.7}}</td>
 <td>{{value.8}}</td>
 <td>{{value.9}}</td>
 <td>{{value.10}}</td>
-<!--<td>{{value.11}}</td>-->
-<td>{{value.12|floatformat:3}}</td>
-<!--
-<td><strong>{{value.22}}</strong></td>
--->
-<td>{{value.13|floatformat:3}}</td>
-<td>{{value.14|floatformat:3}}</td>
-<td>{{value.15|floatformat:3}}</td>
-<!--<td>{{value.16}}</td>-->
-<!--
-<td>{{value.17}}</td>
-<td>{{value.18}}</td>
-<td>{{value.19}}</td>
-<td><strong>{{value.23}}</strong></td>
--->
+<td><strong>{{value.11|floatformat}}</strong></td>
+
 </tr>
 {% endfor %}
 </table>
@@ -101,9 +47,53 @@
 <br>
 {% endif %}
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<span>Проверка наличия данных</span>
+{% if data_table_check_data_header %}
+<table class="table_vertical" id="data-table_2" >
+<thead>
 
+<tr>
+{% for value in data_table_check_data_header %}
+   <th class="th_vertical">{{value}}</th>
+{% endfor %}
+</tr>
+</thead>
+{% for value in data_table_check_data %}
+<tr>
+<td>{{value.0|date:"d M Y"}}</td>
+<td class="td_vertical">{{value.1}}</td>
+<td class="td_vertical">{{value.2}}</td>
+<td class="td_vertical">{{value.3}}</td>
+<td>{{value.4}}</td>
+<td>{{value.5}}</td>
+<td>{{value.6}}</td>
+<td>{{value.7}}</td>
+<td>{{value.8}}</td>
+<td>{{value.9}}</td>
+<td>{{value.10}}</td>
+<td>{{value.11}}</td>
+<td>{{value.12}}</td>
+<td>{{value.13}}</td>
+<td>{{value.14}}</td>
+<td>{{value.15}}</td>
+<td>{{value.16}}</td>
+<td>{{value.17}}</td>
+<td>{{value.18}}</td>
+<td>{{value.19}}</td>
+<td>{{value.20}}</td>
+<td>{{value.21}}</td>
+<td>{{value.22}}</td>
+<td>{{value.23}}</td>
+<td>{{value.24}}</td>
+</tr>
+{% endfor %}
+</table>
+{% else %}
+<span><strong>Нет данных.</strong></span>
+<br>
+<br>
+<br>
+{% endif %}
+<br>
+<br>
+<br>
