--- a/prizmer/templates/economic.html
+++ b/prizmer/templates/economic.html
@@ -11,7 +11,7 @@
         <span id="title-report"><strong>Отчёты &nbsp;</strong></span>
         <select id="choice_report">
             <option value="0">Выберите отчёт...</option>
-            <!--<option value="1">Потребление за период.</option>
+            <option value="1">Потребление за период.</option>
             <option value="2">Показания на дату.</option>
             <option value="3">Показания за период.</option>
             <option value="4">30-мин. срез мощности.</option>
@@ -22,7 +22,7 @@
 			<option value="44">44. Отчёт по электричеству на дату</option>
 			<option value="46">46. Отчёт по воде на дату</option>
 			<option value="48">48. Отчёт по теплу на дату</option>
-			<option value="66">66. Отчёт по теплу и воде на дату. Эльф.</option> -->
+			<option value="66">66. Отчёт по теплу и воде на дату. Эльф.</option>
 			<option value="76">76. Отчёт по всем ресурсам на дату для абонента</option> 
 			<option value="86">86. Статистика опроса по электрике</option> 
 			<option value="88">88. Статистика опроса по теплу</option> 
