отчёт для элеткрики в с300 - без выгрузки

--- a/prizmer/templates/economic.html
+++ b/prizmer/templates/economic.html
@@ -26,8 +26,11 @@
 			<option value="76">76. Отчёт по всем ресурсам на дату для абонента</option> 
 			<option value="86">86. Статистика опроса по электрике</option> 
 			<option value="88">88. Статистика опроса по теплу</option> 
+			
 			<option value="90">90. Статистика опроса по воде (импульсные ПУ)</option> 
 			<option value="92">92. Статистика опроса по всем ресурсам за месяц</option> 
+			
+			<option value="89">89. Отчёт для бухгалтерии по электрике (C-300)</option>
 
         </select>
         <div id ="export_report">-------</div>
