--- a/prizmer/templates/data_table/electric/41_2.html
+++ b/prizmer/templates/data_table/electric/41_2.html
@@ -54,8 +54,8 @@
 
 <tr>
 {% for value in data_table_check_data_header %}
-<th class="th_vertical">{{value}} </th>
-  <!--  <th class="th_vertical">{{value.0}} {{value.1}} </th> -->
+<!-- <th class="th_vertical">{{value}} </th> -->
+   <th class="th_vertical">{{value.0}} {{value.1}} </th>
 {% endfor %}
 </tr>
 </thead>
@@ -86,6 +86,93 @@
 <td>{{value.22}}</td>
 <td>{{value.23}}</td>
 <td>{{value.24}}</td>
+<td>{{value.25}}</td>
+<td>{{value.26}}</td>
+<td>{{value.27}}</td>
+<td>{{value.28}}</td>
+<td>{{value.29}}</td>
+<td>{{value.30}}</td>
+<td>{{value.31}}</td>
+<td>{{value.32}}</td>
+<td>{{value.33}}</td>
+<td>{{value.34}}</td>
+<td>{{value.35}}</td>
+<td>{{value.36}}</td>
+<td>{{value.37}}</td>
+<td>{{value.38}}</td>
+<td>{{value.39}}</td>
+<td>{{value.40}}</td>
+<td>{{value.41}}</td>
+<td>{{value.42}}</td>
+<td>{{value.43}}</td>
+<td>{{value.44}}</td>
+<td>{{value.45}}</td>
+<td>{{value.46}}</td>
+<td>{{value.47}}</td>
+<td>{{value.48}}</td>
+<td>{{value.49}}</td>
+<td>{{value.50}}</td>
+<td>{{value.51}}</td>
+<td>{{value.52}}</td>
+<td>{{value.53}}</td>
+<td>{{value.54}}</td>
+<td>{{value.55}}</td>
+<td>{{value.56}}</td>
+<td>{{value.57}}</td>
+<td>{{value.58}}</td>
+<td>{{value.59}}</td>
+<td>{{value.60}}</td>
+<td>{{value.61}}</td>
+<td>{{value.62}}</td>
+<td>{{value.63}}</td>
+<td>{{value.64}}</td>
+<td>{{value.65}}</td>
+<td>{{value.66}}</td>
+<td>{{value.67}}</td>
+<td>{{value.68}}</td>
+<td>{{value.69}}</td>
+<td>{{value.70}}</td>
+<td>{{value.71}}</td>
+<td>{{value.72}}</td>
+<td>{{value.73}}</td>
+<td>{{value.74}}</td>
+<td>{{value.75}}</td>
+<td>{{value.76}}</td>
+<td>{{value.77}}</td>
+<td>{{value.78}}</td>
+<td>{{value.79}}</td>
+<td>{{value.80}}</td>
+<td>{{value.81}}</td>
+<td>{{value.82}}</td>
+<td>{{value.83}}</td>
+<td>{{value.84}}</td>
+<td>{{value.85}}</td>
+<td>{{value.86}}</td>
+<td>{{value.87}}</td>
+<td>{{value.88}}</td>
+<td>{{value.89}}</td>
+<td>{{value.90}}</td>
+<td>{{value.91}}</td>
+<td>{{value.92}}</td>
+<td>{{value.93}}</td>
+<td>{{value.94}}</td>
+<td>{{value.95}}</td>
+<td>{{value.96}}</td>
+<td>{{value.97}}</td>
+<td>{{value.98}}</td>
+<td>{{value.99}}</td>
+<td>{{value.100}}</td>
+<td>{{value.101}}</td>
+<td>{{value.102}}</td>
+<td>{{value.103}}</td>
+<td>{{value.104}}</td>
+<td>{{value.105}}</td>
+<td>{{value.106}}</td>
+<!-- <td>{{value.107}}</td>
+<td>{{value.108}}</td>
+<td>{{value.109}}</td>
+<td>{{value.110}}</td> -->
+
 </tr>
 {% endfor %}
 </table>
