Подправлен отчёт для ботсада csv

--- a/prizmer/templates/data_table/electric/41_2.html
+++ b/prizmer/templates/data_table/electric/41_2.html
@@ -168,10 +168,10 @@
 <td>{{value.104}}</td>
 <td>{{value.105}}</td>
 <td>{{value.106}}</td>
-<!-- <td>{{value.107}}</td>
+<td>{{value.107}}</td>
 <td>{{value.108}}</td>
 <td>{{value.109}}</td>
-<td>{{value.110}}</td> -->
+<td>{{value.110}}</td>
 
 </tr>
 {% endfor %}
