--- a/prizmer/templates/economic.html
+++ b/prizmer/templates/economic.html
@@ -31,6 +31,7 @@
 			<option value="92">92. Статистика опроса по всем ресурсам за месяц</option> 
 			
 			<option value="89">89. Отчёт для бухгалтерии по электрике (C-300)</option>
+			<option value="93">93. Отчёт для бухгалтерии по воде (C-300)</option>
 
         </select>
         <div id ="export_report">-------</div>
