Отчёт со статистикой по цифровым водным приборам пульсар - 94

--- a/prizmer/templates/economic.html
+++ b/prizmer/templates/economic.html
@@ -32,6 +32,8 @@
 			
 			<option value="89">89. Отчёт для бухгалтерии по электрике (C-300)</option>
 			<option value="93">93. Отчёт для бухгалтерии по воде (C-300)</option>
+			
+			<option value="94">94. Статистика опроса по воде (цифровые ПУ)</option> 
 
         </select>
         <div id ="export_report">-------</div>
