--- a/prizmer/templates/control.html
+++ b/prizmer/templates/control.html
@@ -18,10 +18,10 @@
         <span id="title-report"><strong>Отчёты &nbsp;</strong></span>
         <select id="choice_report">
             <option value="0"><strong>Выберите отчёт...</strong></option>
-<!--
+
             <option value="1">Потребление за период.</option>
             <option value="2">Показания на дату.</option>
-            <option value="25">Профиль показаний за период</option>
+   <!--         <option value="25">Профиль показаний за период</option>
 			<option value="27">Профиль показаний за период по 2 тарифам</option> 
 			<option value="29">29. Профиль показаний за период по 3 тарифам</option>			
             <option value="4">30-мин. срез мощности.</option>
