новый отчёт по электрике с реактивкой 95

--- a/prizmer/templates/control.html
+++ b/prizmer/templates/control.html
@@ -21,14 +21,14 @@
 
             <option value="1">Потребление за период.</option>
             <option value="2">Показания на дату.</option>
-   <!--         <option value="25">Профиль показаний за период</option>
+           <option value="25">Профиль показаний за период</option>
 			<option value="27">Профиль показаний за период по 2 тарифам</option> 
 			<option value="29">29. Профиль показаний за период по 3 тарифам</option>			
             <option value="4">30-мин. срез мощности.</option>
             <option value="6">Часовые приращения энергии</option> 
             <option value="8">8. Режимный день</option> 
 
-            <option value="14">Показания на дату. 2 Тарифа</option> -->
+            <option value="14">Показания на дату. 2 Тарифа</option>
 
             <option value="16">16. Показания на дату. 3 Тарифа</option>
 <!--
@@ -44,6 +44,7 @@
 			<option value="91">91. Потребление за период. 3 Тарифа</option>
 			<option value="72">72. Показания на дату с комментариями. 3 Тарифа</option>
 			<option value="77">77. Баланс за период по балансной группе</option>
+			<option value="95">95. Профиль показаний за период по A+ и R+ график</option>
         </select>
         <div id ="export_report">-------</div>
 		
