Добавлен скрипт в service  прогружающий текущие для 10М и 16М, а так же отчёт

--- a/prizmer/templates/service/service_get_info.html
+++ b/prizmer/templates/service/service_get_info.html
@@ -24,9 +24,14 @@
     </div>
 <br>
 <div id="meters_change_block">
- &nbsp;&nbsp;Статистика по корпуса
+<br>
+  <span><strong>&nbsp;&nbsp; Добавить воможность считывания Текущих параметров для счётчиков типа: </strong></span>
 <br><br>
- В разработке
+
+        &nbsp;&nbsp; <span onclick="load_service('add_current_taken_params_pulsar16m')" class="button" id="current-pulsar-add-button">Пульсар 16М/10М</span> &nbsp;{{pulsar16m_status}}
+		<br>
+		<br>
+		<br>
     </div>
 	
 </form>
