--- a/prizmer/templates/water.html
+++ b/prizmer/templates/water.html
@@ -5,7 +5,14 @@
 <div id="title-subsystem-icon">{% load staticfiles %}
 <img  src="{%static "images/water-ico64.png" %}" alt="Водоучёт"></div> 
 <h2 id="title-subsystem">Учёт водопотребления</h2>
-
+<!-- <div>
+        <span id="title-pokazaniya"><strong>Показания &nbsp;</strong></span>
+        
+        <span class="button" id="electric-daily-button">На начало суток</span>
+        <span class="button" id="electric-current-button">* Текущие</span>
+        <br>
+        <br>
+    </div> -->
     
     <div>
         <span id="title-report"><strong>Отчёты &nbsp;</strong></span>
@@ -43,6 +50,7 @@
 			<option value="84">84. Показания по воде на дату с теплосчётчиков Эльф</option>
 			<option value="85">85. Потребление по воде за период с теплосчётчиков Эльф</option>
 			<option value="87">87. Баланс за период с регистратора импульсов </option>
+			<option value="96">96. Показания по воде текущие</option>
 		</select>
         <div id ="export_report">-------</div>
     </div>
