--- a/prizmer/templates/data_table/water/96.html
+++ b/prizmer/templates/data_table/water/96.html
@@ -3,7 +3,7 @@
 <script src="/static/liHighLight.js" type=text/javascript></script>
 </head>
 <body>
-<span>Показания по воде за <strong>{{electric_data_end}}</strong></span>
+<span>Показания по воде текущие*</span>
 <br>
 <span>Абонент: <strong>{{obj_title}}</strong></span>
 <br>
@@ -16,8 +16,8 @@
 <th>Пульсар</th>
 <th>Канал</th>
 <th>Показания</th>
-
-<!--<th>Дата</th>-->
+<th>Дата</th>
+<th>Время</th>
 
 </tr>
 {% for value in data_table %}
@@ -27,6 +27,8 @@
 <td>{{value.3}}</td>
 <td>{{value.4}}</td>
 <td><strong>{{value.5}}</strong></td>
+<td>{{value.0}}</td>
+<td>{{value.6}}</td>
 
 <!--<td>{{value.3}}</td>-->
 </tr>
@@ -40,5 +42,6 @@
 {% endif %}
 
 <br>
+* Текущие показания не считываются в автоматическом режиме и представляют собой последние считанные данные в ручном режиме
 </body>
 </html>
