Новые иконки в сервисных  загрузках

--- a/prizmer/templates/choose_service.html
+++ b/prizmer/templates/choose_service.html
@@ -134,8 +134,8 @@ $(function() {
 		<br>
 		<div>
 		{% load staticfiles %} <img onclick="load_service('service_file')" id="download-ico" src="{%static "images/download-ico64.png" %}" alt="Загрузить файл">
-		{% load staticfiles %} <img onclick="load_service('service_electric')" id="electric-ico" src="{%static "images/electric-ico64.png" %}" alt="Электрика">
-		{% load staticfiles %} <img  onclick="load_service('service_water')" id="water-ico" src="{%static "images/water-ico64.png" %}" alt="Вода">
+		{% load staticfiles %} <img onclick="load_service('service_electric')" id="electric-ico" src="{%static "images/digital2-ico64.png" %}" alt="Электрика">
+		{% load staticfiles %} <img  onclick="load_service('service_water')" id="water-ico" src="{%static "images/impulse2-ico64.png" %}" alt="Вода">
 		{% load staticfiles %} <img  onclick="load_service('service_change_electric')" id="change-ico" src="{%static "images/change-ico64.png" %}" alt="Замена счётчиков-электричество и тепло!">
 		{% load staticfiles %} <img  onclick="load_service('service_get_info')" id="change-ico" src="{%static "images/tech-ico64.png" %}" alt="Информация по объекту">
 		{% load staticfiles %} <img  onclick="load_service('service_balance_load')" id="balance-ico" src="{%static "images/balance-ico64.png" %}" alt="Загрузка балансных групп">
