--- a/prizmer/templates/service/service_electric.html
+++ b/prizmer/templates/service/service_electric.html
@@ -7,7 +7,7 @@
 <script src="/static/liHighLight.js" type=text/javascript></script>
 
 <br>
-<span><strong> Электрика | Прогрузка</strong> </span>
+<span><strong> Цифровые приборы | Прогрузка</strong> </span>
 <br><br>
 
 <p>
