--- a/prizmer/templates/service/service_water.html
+++ b/prizmer/templates/service/service_water.html
@@ -7,7 +7,7 @@
 <script src="/static/liHighLight.js" type=text/javascript></script>
 
 <br>
-<span><strong> Вода | Прогрузка</strong> </span>
+<span><strong> Импульсные приборы | Прогрузка</strong> </span>
 <br><br>
 
 <p>
