Отчёт по r+ a+ восстановленый по полчасовкам

--- a/prizmer/templates/control.html
+++ b/prizmer/templates/control.html
@@ -45,6 +45,7 @@
 			<option value="72">72. Показания на дату с комментариями. 3 Тарифа</option>
 			<option value="77">77. Баланс за период по балансной группе</option>
 			<option value="95">95. Профиль показаний за период по A+ и R+ график</option>
+			<option value="98">98. Восстановленый суточный срез A+ и R+</option>
         </select>
         <div id ="export_report">-------</div>
 		
