--- a/prizmer/templates/service/service_change_electric.html
+++ b/prizmer/templates/service/service_change_electric.html
@@ -14,22 +14,21 @@
  <div id="meters_change_block">
  &nbsp;&nbsp;Старый номер счётчика будет удалён из БД, на его место будет записан новый счётчик. 
 <br><br>
-В разработке
-<!--  <font color="000">
+ <font color="000">
         <span><strong>&nbsp;&nbsp;Старый счётчик&nbsp;</strong></span>
-		<input id="old_meter" name="old_meter" type="text">
+		<input id="old_meter" name="old_meter" type="text" value ={{old_meter}}>
 
 		<span><strong>&nbsp;&nbsp;&nbsp;Новый счётчик&nbsp;</strong></span>
-		<input id="new_meter" name="new_meter" type="text">
+		<input id="new_meter" name="new_meter" type="text" value={{new_meter}}>
 		<br><br>
-        &nbsp;&nbsp;<span onclick="load_service('service_change_electric')" class="button" id="change_button">Заменить</span> 
+        &nbsp;&nbsp;<span onclick="load_service('service_change_electric')" class="button" id="change_button"><b>Заменить</b></span> 
 		<br>        
 	</font>	
 	 <br>&nbsp;&nbsp; <font color="#FF6347"> {{change_meter_status}} </font>
 	<br><br>
-    </div> -->
+    </div>
 <br>
-<!-- <div id="meters_change_block">
+<div id="meters_change_block">
  &nbsp;&nbsp;Счётчики будут поменяны местами в БД
 <br><br>
  <font color="000">
@@ -39,13 +38,13 @@
 		<span><strong>&nbsp;&nbsp;&nbsp;Счётчик 2&nbsp;</strong></span>
 		<input id="meter2" name="meter2" type="text">
 		<br><br>
-        &nbsp;&nbsp;<span onclick="load_service('service_replace_electric')" class="button" id="replace_button">Заменить</span> 
+        &nbsp;&nbsp;<span onclick="load_service('service_replace_electric')" class="button" id="replace_button"><b>Заменить</b></span> 
 		<br>        
 	</font>	
 	 <br>&nbsp;&nbsp; <font color="#FF6347"> {{replace_meter_status}} <font>
 	<br><br>
     </div>
-	 -->
+	
 </form>
 <br>
 <br>
