--- a/prizmer/templates/service/service_change_electric.html
+++ b/prizmer/templates/service/service_change_electric.html
@@ -33,10 +33,10 @@
 <br><br>
  <font color="000">
         <span><strong>&nbsp;&nbsp;Счётчик 1&nbsp;</strong></span>
-		<input id="meter1" name="meter1" type="text">
+		<input id="meter1" name="meter1" type="text" value={{meter1}}>
 
 		<span><strong>&nbsp;&nbsp;&nbsp;Счётчик 2&nbsp;</strong></span>
-		<input id="meter2" name="meter2" type="text">
+		<input id="meter2" name="meter2" type="text" value={{meter2}}>
 		<br><br>
         &nbsp;&nbsp;<span onclick="load_service('service_replace_electric')" class="button" id="replace_button"><b>Заменить</b></span> 
 		<br>        
