--- a/prizmer/templates/water.html
+++ b/prizmer/templates/water.html
@@ -50,7 +50,7 @@
 			<option value="84">84. Показания по воде на дату с теплосчётчиков Эльф</option>
 			<option value="85">85. Потребление по воде за период с теплосчётчиков Эльф</option>
 			<option value="87">87. Баланс за период с регистратора импульсов </option>
-			<option value="96">96. Текущие казания по воде с регистратора импульсов</option>
+			<option value="96">96. Текущие показания по воде с регистратора импульсов</option>
 		</select>
         <div id ="export_report">-------</div>
     </div>
