--- a/prizmer/templates/service/service_change_electric.html
+++ b/prizmer/templates/service/service_change_electric.html
@@ -7,11 +7,11 @@
 <script src="/static/liHighLight.js" type=text/javascript></script>
 
 <br>
-<span><strong> Электрика и тепло | Замена счётчиков</strong> </span>
+<span><strong> Цифровые приборы | Замена счётчиков</strong> </span>
 <br><br>
 
 <p>
- <div id="meters_change_block">
+ <div class="meters_change_block">
  &nbsp;&nbsp;Старый номер счётчика будет удалён из БД, на его место будет записан новый счётчик. 
 <br><br>
  <font color="000">
@@ -28,7 +28,7 @@
 	<br><br>
     </div>
 <br>
-<div id="meters_change_block">
+<div class="meters_change_block">
  &nbsp;&nbsp;Счётчики будут поменяны местами в БД
 <br><br>
  <font color="000">
