--- a/prizmer/templates/service/service_electric.html
+++ b/prizmer/templates/service/service_electric.html
@@ -7,11 +7,11 @@
 <script src="/static/liHighLight.js" type=text/javascript></script>
 
 <br>
-<span><strong> Цифровые приборы | Прогрузка</strong> </span>
+<span><strong> Цифровые приборы | Прогрузка</strong> &nbsp; &nbsp;&nbsp;&nbsp; <a class="button" href =''> образец прогрузочного файла </a></span>
 <br><br>
 
 <p>
- <div>
+   <div class="meters_change_block">
         <span><strong>Загрузка портов &nbsp;</strong></span>
         <span onclick="load_service('load_tcp_ip')" class="button" id="tcp-ip-port-button">Загрузить</span> &nbsp;{{tcp_ip_status}}
 		<br>
@@ -23,7 +23,10 @@
 		<span><strong>Загрузка  счётчиков&nbsp;</strong></span>
         <span onclick="load_service('load_electric_counters')" class="button" id="counter_load_button">Загрузить</span> &nbsp;{{counter_status}}
     </div>
-
+	
+    <p>	
+	<p>
+	
 </form>
 <br>
 <br>
