выгрузка образцов в service/config

--- a/prizmer/templates/service/service_balance_load.html
+++ b/prizmer/templates/service/service_balance_load.html
@@ -11,10 +11,16 @@
 <br><br>
 
 <p>
- <div>
+ <div class="meters_change_block">
         <span><strong>Загрузка балансной группы &nbsp;</strong></span>
         <span onclick="load_service('load_balance_group')" class="button" id="balance-button">Загрузить</span> &nbsp;{{balance_status}}
 		<br>
+</div>
+<p>
+<p>
+ <div class="meters_change_block">
+        <p>
+	&nbsp; &nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_balance_template/"> Образец прогрузочного файла для создания балансной группы </a></span>
 </div>
 
 </form>
