--- a/prizmer/templates/service/service_electric.html
+++ b/prizmer/templates/service/service_electric.html
@@ -30,6 +30,10 @@
 	<p>
 	&nbsp; &nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_electric_template/"> Образец прогрузочного файла по электрике </a></span>
 	<p>
+	&nbsp; &nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_heat_template/"> Образец прогрузочного файла по теплу </a></span>
+	<p>
+	&nbsp; &nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_water_digital_template/"> Образец прогрузочного файла по воде </a></span>
+	<p>
 	</div>
 </form>
 <br>
