--- a/prizmer/templates/service/service_get_info.html
+++ b/prizmer/templates/service/service_get_info.html
@@ -7,11 +7,11 @@
 <script src="/static/liHighLight.js" type=text/javascript></script>
 
 <br>
-<span><strong> Электрика и тепло | Замена счётчиков</strong> </span>
+<span><strong> Приборы | Настройки</strong> </span>
 <br><br>
 
 <p>
- <div id="meters_change_block">
+ <div class="meters_change_block">
  &nbsp;&nbsp; Создать прогрузочные ведомости из БД
 		<br><br>
        <!--  &nbsp;&nbsp;<span onclick="load_service('get_electric_progruz')" class="button" id="get_info">Электрика</span> 
@@ -23,7 +23,7 @@
 	В разработке
     </div>
 <br>
-<div id="meters_change_block">
+<div class="meters_change_block">
 <br>
   <span><strong>&nbsp;&nbsp; Добавить воможность считывания Текущих параметров для счётчиков типа: </strong></span>
 <br><br>
