--- a/prizmer/templates/service/service_water.html
+++ b/prizmer/templates/service/service_water.html
@@ -11,7 +11,7 @@
 <br><br>
 
 <p>
- <div>
+ <div class="meters_change_block">
         <span><strong>Загрузка портов &nbsp;</strong></span>
         <span onclick="load_service('load_water_port')" class="button" id="tcp-ip-port-button">Загрузить</span> &nbsp;{{tcp_ip_status}}
 		<br>
@@ -23,7 +23,13 @@
 		<span><strong>Загрузка  Пульсаров&nbsp;</strong></span>
         <span onclick="load_service('load_water_pulsar')" class="button" id="pulsar_load_button">Загрузить</span> &nbsp;{{counter_status}}
     </div>
-
+<p>	
+	<p>
+	<div class="meters_change_block">
+	<p>	
+	&nbsp; &nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_water_impulse_template/"> Образец прогрузочного файла по воде </a></span>
+	<p>
+	</div>
 </form>
 <br>
 <br>
