--- a/prizmer/templates/account/electric_info.html
+++ b/prizmer/templates/account/electric_info.html
@@ -3,16 +3,14 @@
     </head>
     <body>
 <script src="/static/liHighLight.js" type=text/javascript></script>
-<span>Показания потребленной электроэнергии на <strong></strong> по 3-ём тарифам</span>
+<span>Показания электроэнергии на начало суток <strong>{{date_end}}</strong> по 3-ём тарифам</span>
 <br>
 <br>
 
 {% if dt_electric %}
 <table class="content" id="data-table" >
 <tr>
-<th>Дата</th>
-<th>Абонент</th>
-<th>Заводской номер</th>
+<th>Счётчик</th>
 <th>T0 A+, кВт*ч</th>
 <th>T1 A+</th>
 <th>T2 A+</th>
@@ -20,24 +18,19 @@
 </tr>
 {% for value in dt_electric %}
 <tr>
-<td>{{value.0}}</td>
-<td>{{value.1}}</td>
-
+<td>{{value.4}}</td>
+<td>{{value.6}}</td>
+<td>{{value.7}}</td>
+<td>{{value.8}}</td>
+<td>{{value.9}}</td>
 </tr>
 {% endfor %}
 </table>
 {% else %}
 <span><strong>Нет данных.</strong></span>
-<br>
 {% endif %}
 
-
-
 </div>
-<br>
-<br>
-<br>
-<br>
 <br>
 </body>
 </html>
