отчёты по данфосам

--- a/prizmer/templates/heat.html
+++ b/prizmer/templates/heat.html
@@ -42,8 +42,8 @@
 			<option value="74">74. Показания по теплу. Теплосчётчик Карат-307</option>
 			<option value="75">75. Потребление по теплу. Теплосчётчик Карат-307</option>
 			<option value="81">81. Потребление по теплу. Теплосчётчик Пульсар</option>
-			<!-- <option value="97">97. Потребление по теплу. Теплосчётчик Danfoss</option>
-			<option value="100">100. Показания по теплу. Теплосчётчик Danfoss</option> -->
+		    <option value="97">97. Потребление по теплу. Теплосчётчик Danfoss</option>
+			<option value="100">100. Показания по теплу. Теплосчётчик Danfoss</option> 
 
         </select>
         <div id ="export_report">-------</div>
