изменения сортировки в 38-39 отчётах

--- a/prizmer/templates/data_table/electric/41_2.html
+++ b/prizmer/templates/data_table/electric/41_2.html
@@ -172,6 +172,67 @@
 <td>{{value.108}}</td>
 <td>{{value.109}}</td>
 <td>{{value.110}}</td>
+<td>{{value.111}}</td>
+<td>{{value.112}}</td>
+<td>{{value.113}}</td>
+<td>{{value.114}}</td>
+<td>{{value.115}}</td>
+<td>{{value.116}}</td>
+<td>{{value.117}}</td>
+<td>{{value.118}}</td>
+<td>{{value.119}}</td>
+<td>{{value.120}}</td>
+<td>{{value.121}}</td>
+<td>{{value.122}}</td>
+<td>{{value.123}}</td>
+<td>{{value.124}}</td>
+<td>{{value.125}}</td>
+<td>{{value.126}}</td>
+<td>{{value.127}}</td>
+<td>{{value.128}}</td>
+<td>{{value.129}}</td>
+<td>{{value.130}}</td>
+<td>{{value.131}}</td>
+<td>{{value.132}}</td>
+<td>{{value.133}}</td>
+<td>{{value.134}}</td>
+<td>{{value.135}}</td>
+<td>{{value.136}}</td>
+<td>{{value.137}}</td>
+<td>{{value.138}}</td>
+<td>{{value.139}}</td>
+<td>{{value.140}}</td>
+<td>{{value.141}}</td>
+<td>{{value.142}}</td>
+<td>{{value.143}}</td>
+<td>{{value.144}}</td>
+<td>{{value.145}}</td>
+<td>{{value.146}}</td>
+<td>{{value.147}}</td>
+<td>{{value.148}}</td>
+<td>{{value.149}}</td>
+<td>{{value.150}}</td>
+<td>{{value.151}}</td>
+<td>{{value.152}}</td>
+<td>{{value.153}}</td>
+<td>{{value.154}}</td>
+<td>{{value.155}}</td>
+<td>{{value.156}}</td>
+<td>{{value.157}}</td>
+<td>{{value.158}}</td>
+<td>{{value.159}}</td>
+<td>{{value.160}}</td>
+<td>{{value.161}}</td>
+<td>{{value.162}}</td>
+<td>{{value.163}}</td>
+<td>{{value.164}}</td>
+<td>{{value.165}}</td>
+<td>{{value.166}}</td>
+<td>{{value.167}}</td>
+<td>{{value.168}}</td>
+<td>{{value.169}}</td>
+<td>{{value.170}}</td>
+
 
 
 </tr>
