Декораторы+переход в админку

--- a/prizmer/templates/base.html
+++ b/prizmer/templates/base.html
@@ -588,9 +588,14 @@ var guid_abonents=$(this).attr('id');
 	<div id="myfooter">
          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	    {% load staticfiles %} <a target="_blank" href="../../askue/instruction_user" ><img id="user_info-ico48" src="{%static "images/user_info-ico48.png" %}"  title="Инструкция пользователя"></a>&nbsp;&nbsp;&nbsp;&nbsp;
-        {% load staticfiles %} <a target="_blank" href="../../askue/instruction_admin" ><img id="admin_info-ico48" src="{%static "images/admin_info-ico48.png" %}"  title="Инструкция администратора"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <!-- {% load staticfiles %} <a target="_blank" href="../../service/config" ><img id="faq-ico48" src="{%static "images/faq-ico48.png" %}"  title="Часто задаваемые вопросы"></a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+		{% load staticfiles %} <a target="_blank" href="../../askue/instruction_admin" ><img id="admin_info-ico48" src="{%static "images/admin_info-ico48.png" %}"  title="Инструкция администратора"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		{% load staticfiles %} <a target="_blank" href="../../admin" ><img id="admin_panel-ico48" src="{%static "images/admin_panel-ico48.png" %}"  title="Панель администратора"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		{% load staticfiles %} <a target="_blank" href="../../service/config" ><img id="admin_config-ico48" src="{%static "images/admin_config-ico48.png" %}"  title="Панель конфигурирования"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+		
 	<div id="vizitka">
 	<span><strong><a href="http://www.prizmer.ru/">ООО "Правильные измерения"</a></strong></span><br>
+	 v.1.21.0
     </div>
 </div>
 </div>
