--- a/prizmer/templates/data_table/heat/56.html
+++ b/prizmer/templates/data_table/heat/56.html
@@ -30,10 +30,10 @@
 <td>{{value.4|floatformat:7}}</td>
 <td>{{value.5|floatformat:1}}</td>
 <td>{{value.6|floatformat:1}}</td> -->
-<td><strong>{{value.3}}</strong></td>
-<td>{{value.4}}</td>
-<td>{{value.5}}</td>
-<td>{{value.6}}</td>
+<td><strong>{{value.3|floatformat:3}}</strong></td>
+<td>{{value.4|floatformat:3}}</td>
+<td>{{value.5|floatformat:1}}</td>
+<td>{{value.6|floatformat:1}}</td>
 
 </tr>
 {% endfor %}
