--- a/prizmer/templates/data_table/water/39.html
+++ b/prizmer/templates/data_table/water/39.html
@@ -28,9 +28,9 @@
 <td>{{value.3}}</td>
 <!--<td>{{value.3}}</td>-->
 <td>{{value.4}}</td>
-<td>{{value.5}}</td>
-<td>{{value.6}}</td>
-<td>{{value.7}}</td>
+<td>{{value.5|floatformat:3}}</td>
+<td>{{value.6|floatformat:3}}</td>
+<td>{{value.7|floatformat:3}}</td>
 </tr>
 {% endfor %}
 </table>
