--- a/prizmer/templates/data_table/water/38.html
+++ b/prizmer/templates/data_table/water/38.html
@@ -26,7 +26,7 @@
 <td>{{value.2}}</td>
 <td>{{value.3}}</td>
 <td>{{value.4}}</td>
-<td><strong>{{value.5}}</strong></td>
+<td><strong>{{value.5|floatformat:3}}</strong></td>
 
 <!--<td>{{value.3}}</td>-->
 </tr>
