Добавлены проверки и изменены надписи при загрузке счётчиков

--- a/prizmer/templates/service/service_get_info.html
+++ b/prizmer/templates/service/service_get_info.html
@@ -23,7 +23,7 @@
 	В разработке
     </div>
 <br>
-<div class="meters_change_block">
+<!-- <div class="meters_change_block">
 <br>
   <span><strong>&nbsp;&nbsp; Добавить воможность считывания Текущих параметров для счётчиков типа: </strong></span>
 <br><br>
@@ -32,7 +32,7 @@
 		<br>
 		<br>
 		<br>
-    </div>
+    </div> -->
 	
 </form>
 <br>
