solved: problem in download impulse

--- a/prizmer/templates/account/electric_info.html
+++ b/prizmer/templates/account/electric_info.html
@@ -12,9 +12,9 @@
 <tr>
 <th>Счётчик</th>
 <th>T0 A+, кВт*ч</th>
-<th>T1 A+</th>
-<th>T2 A+</th>
-<th>T3 A+</th>
+<th>T1 A+, кВт*ч</th>
+<th>T2 A+, кВт*ч</th>
+<th>T3 A+, кВт*ч</th>
 </tr>
 {% for value in dt_electric %}
 <tr>
