Register added in service config

--- a/prizmer/templates/service/service_get_info.html
+++ b/prizmer/templates/service/service_get_info.html
@@ -12,15 +12,18 @@
 
 <p>
  <div class="meters_change_block">
- &nbsp;&nbsp; Создать прогрузочные ведомости из БД
+ &nbsp;&nbsp; Создать Паспорт объекта по ресурсу
 		<br><br>
-       <!--  &nbsp;&nbsp;<span onclick="load_service('get_electric_progruz')" class="button" id="get_info">Электрика</span> 
+        &nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_electric_progruz/"> Электрика </a></span> 
 		<br><br>
-        &nbsp;&nbsp;<span onclick="load_service('get_water_progruz')" class="button" id="get_info">Вода</span> 
+        &nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_water_progruz/"> Вода </a></span> 
+		<br><br>
+		&nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_water_impulse_progruz/"> Вода импульсные ПУ </a></span> 
 		<br><br>   
-        &nbsp;&nbsp;<span onclick="load_service('get_heat_progruz')" class="button" id="get_info">Тепло</span> 
-		<br><br> 	 -->	
-	В разработке
+		&nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_heat_progruz/"> Тепло </a></span> 
+    
+		<br><br> 	 	
+
     </div>
 <br>
 <!-- <div class="meters_change_block">
